Changes in version 1.3.1

o UPDATE: output names for `randwalk`

o UPDATE: Shiny interface is condensed and more step-by-step progressive

o UPDATE: Shiny includes random walk analysis

o UPDATE: Shiny includes spreading activation analysis (thanks to Cythina Siew)

o ADD: animation plot for spreading activation analysis in Shiny


Changes in version 1.3.0

o FIX: output of two-way ANOVA in `test.bootSemNeT`

o FIX: 'groups' argument in `test.bootSemNeT`

o UPDATE: added integration of SemNetCleaner output into `SemNeTShiny`

o MOVE: `equate` and `finalize` moved from SemNetCleaner to SemNeT

o REMOVE: foreach and doParallel dependencies were removed (all parallelization is through the pbapply package)

o REMOVE: SemNetCleaner dependency was removed to allow SemNeT to operate independently -- all necessary functions from SemNetCleaner have been moved to internal functions

o UPDATE: `compare.nets` has changed to `compare_nets`

o ADD: Several semantic network estimation methods (see `CN`, `NRW`, and `PF`) -- these are included in the Shiny app

o CHANGE: `partboot` is now `bootSemNeT`

o CHANGE: `plot.partboot` is now `plot.bootSemNeT`

o CHANGE: `partboot.test` is now `test.bootSemNeT`

o UPDATE: `cosine` was added to internal functions to remove archived package from dependencies


Changes in version 1.2.0

o ADD: Shiny app

o FIX: 'groups' argument in `org.plot`

o UPDATE: moved several functions to internal to clean up package

o ADD: binary responses matrices from animals verbal fluency data associated with the 'SemNetCleaner' package (open.animals)


Changes in version 1.1.3

o added extended ANOVA capabilities to `partboot.test` (e.g., two-way ANOVA)


Changes in version 1.1.2

o fixed bug for weighted modularity in `semnetmeas`

o updated citation (PsyArXiv)

o changed y-axis in plots for `partboot` to read as integers (as added black dot for mean in the scatterplots under the raincloud)

o added vignette for analyzing semantic networks
